tests/paczka1/small_fuzzy/87554106.err
Error in line 2: A861 S58 18,0
Error in line 3: A861 S926 36,5
Error in line 8: 43N6fwcl8Lv S147 72,4
